# el_notepade

./: .gitignore  pyproject.toml
src/: __init__.py  db.py  main.py
src/DB/: init_db.py  models.py
src/GUI/: event_add.py  event_redact.py  main_window.py  stat_bar.py
