[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "el_notepade"
version = "0.1.0"
dependencies = [
    "tkinter",
    'importlib-metadata; python_version=>"3.10"',
]
description = ""
readme = ""
requires-python = ">=3.10"


[project.scripts]
cli-name = ""

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}

